    &#8226; Mute hashtags from the overflow menu on a tweet<br/>
    &#8226; Option to ignore all retweets on your timeline<br/>
    &#8226; Fix for night mode when it starts after midnight<br/>
    &#8226; Better widget updating<br/>
    &#8226; Might have fixed the profiles not showing correctly for everyone<br/>
    &#8226; Polish translation added<br/>
<br/><br/>

<b>Version 1.10 Beta 2:</b><br/><br/>
    &#8226; Limit the number of tweets on the timeline according to the "Timeline size" under Advanced Settings<br/>
    &#8226; "To First" toast is now optional<br/>
    &#8226; Fixed the YouTube player and thumbnails<br/>
    &#8226; Faster refreshes<br/>
    &#8226; Attempted a few fixes for the jumping around on timelines (with load button and viewing picture/tweet)<br/>
    &#8226; More translation edits and fully added the Dutch translation<br/>
<br/><br/>

<b>Version 1.10 Beta 1:</b> Finally, some time for real features :)<br/><br/>
    &#8226; View replies to your tweet on the discussions panel of the tweet viewer<br/>
    &#8226; Huge update for 7 inch tablet layouts<br/>
    &#8226; Better support for image loading on timelines<br/>
    &#8226; Option to use old style RT for quotes instead of current method (under advanced settings)<br/>
    &#8226; Option to use absolute dates on the timelines instead of relative<br/>
    &#8226; Added translation (Hungarian, Brazilian Portuguese, Spanish, Russian, started Dutch)<br/>
    &#8226; Compose tweets with the current search query while searching<br/>
    &#8226; Much better handling of mentions on the timeline from Talon Pull. *Should* solve the problem of things getting saved twice<br/>
    &#8226; Clear Searches option under advanced settings<br/>
    &#8226; Fixed the flickering of the actionable toast bar<br/>
    &#8226; Clicking a YouTube video on the timeline will take you directly to that video to view<br/>
    &#8226; Fixes for multiple accounts<br/>
    &#8226; Play Store crash fixes<br/>
<br/><br/>