@@ -438,5 +438,7 @@
     <string name="mute_hashtags">Mute Hashtags</string>
     <string name="muted">Muted</string>
     <string name="view">View</string>
+    <string name="auto_insert_hashtags">Auto-Insert Hashtags</string>
+    <string name="to_replies">Insert any hashtags contained in the tweet into the reply.</string>
 
 </resources>
